<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item android:id="@+id/nav_home"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/nav_home"/>

        <item android:id="@+id/nav_group"
            android:icon="@drawable/baseline_group_work_24"
            android:title="@string/nav_group"/>

        <item android:id="@+id/nav_event"
            android:icon="@drawable/baseline_auto_fix_high_24"
            android:title="@string/nav_event"/>

        <item android:id="@+id/nav_recommend"
            android:icon="@drawable/baseline_recommend_24"
            android:title="@string/nav_recommend"/>
        <item android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/nav_info"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/baseline_delete_sweep_24"
                android:title="@string/nav_delete"/>
        </menu>
    </item>
</menu>